--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@fortawesome/free-brands-svg-icons": "^6.4.2",
         "@fortawesome/free-regular-svg-icons": "^6.4.2",
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
-        "@vueuse/core": "^10.6.1"
+        "@vueuse/core": "^10.6.1",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
