--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "graham-campbell/github": "^12.3",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
+        "laravel/cashier": "^15.0",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.1",
         "laravel/sanctum": "^3.3",
