--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,16 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+GITHUB_CLIENT_ID="" 
+GITHUB_CLIENT_SECRET=""
+GITHUB_CALLBACK_URL="/auth/github/callback"
+
+
+# CASHIER & STRIPE SETTINGS
+STRIPE_KEY=
+VITE_STRIPE_KEY=
+STRIPE_SECRET=
+CASHIER_CURRENCY=eur
+CASHIER_LOGGER=stack
