--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@tiptap/pm": "^2.2.4",
         "@tiptap/starter-kit": "^2.2.4",
         "@tiptap/vue-3": "^2.2.4",
+        "@vuepic/vue-datepicker": "^8.3.1",
         "@vueuse/core": "^10.6.1",
         "date-fns": "^3.1.0",
         "vue-toastification": "^2.0.0-rc.5"
