--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "sass": "^1.72.0",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0",
+        "vite-svg-loader": "^5.1.0",
         "vue": "^3.2.31"
     },
     "dependencies": {
