--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@vuepic/vue-datepicker": "^8.3.1",
         "@vueuse/core": "^10.6.1",
         "date-fns": "^3.1.0",
+        "dayjs": "^1.11.10",
         "vue-toastification": "^2.0.0-rc.5"
     }
 }
