--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
         "@tiptap/starter-kit": "^2.2.4",
         "@tiptap/vue-3": "^2.2.4",
         "@vuepic/vue-datepicker": "^8.3.1",
+        "@vueuse/components": "^10.9.0",
         "@vueuse/core": "^10.6.1",
         "date-fns": "^3.1.0",
         "dayjs": "^1.11.10",
+        "vue-intersect": "^3.0.0",
+        "vue-loading-skeleton": "^2.0.0-beta.1",
         "vue-toastification": "^2.0.0-rc.5"
     }
 }
