--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@tiptap/pm": "^2.2.4",
         "@tiptap/starter-kit": "^2.2.4",
         "@tiptap/vue-3": "^2.2.4",
+        "@vueform/slider": "^2.1.10",
         "@vuepic/vue-datepicker": "^8.3.1",
         "@vueuse/components": "^10.9.0",
         "@vueuse/core": "^10.6.1",
