--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,7 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+VITE_APP_URL="${APP_URL}"
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
@@ -63,6 +64,9 @@ GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 GITHUB_CALLBACK_URL="/auth/github/callback"
 
+GITHUB_APP_CLIENT_ID=
+GITHUB_APP_CLIENT_SECRET=
+VITE_GITHUB_APP_INSTALLATION_URL=https://github.com/apps/openpledge-io/installations/new
 
 # CASHIER & STRIPE SETTINGS
 STRIPE_KEY=
