--- a/.env.example
+++ b/.env.example
@@ -63,16 +63,10 @@ GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 GITHUB_CALLBACK_URL="/auth/github/callback"
 
-# GITHUB APP (PROD)
 GITHUB_APP_CALLBACK_URL="${APP_URL}/github/installation/callback"
-GITHUB_APP_CLIENT_ID=Iv23lixidU6HOChZTPBp
+GITHUB_APP_CLIENT_ID=
 GITHUB_APP_CLIENT_SECRET=
 VITE_GITHUB_APP_INSTALLATION_URL=https://github.com/apps/openpledge-io/installations/new
-
-# GITHUB APP (DEV)
-DEV_GITHUB_APP_CLIENT_ID=Iv23liE4cvObLVbxg9ft
-DEV_GITHUB_APP_CLIENT_SECRET=
-VITE_DEV_GITHUB_APP_INSTALLATION_URL=https://github.com/apps/dev-openpledge-io/installations/new
 
 # CASHIER & STRIPE SETTINGS
 STRIPE_KEY=
