--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 GITHUB_CLIENT_ID="" 
 GITHUB_CLIENT_SECRET=""
 GITHUB_CALLBACK_URL="/auth/github/callback"
+GITHUB_PERSONAL_ACCESS_TOKEN=
 
 GITHUB_APP_CALLBACK_URL="${APP_URL}/github/installation/callback"
 GITHUB_APP_CLIENT_ID=
