Read private key for github bot from env file

--- a/.env.example
+++ b/.env.example
@@ -65,7 +65,7 @@ GITHUB_CALLBACK_URL="/auth/github/callback"
 GITHUB_APP_CALLBACK_URL="${APP_URL}/github/installation/callback"
 GITHUB_APP_CLIENT_ID=
 GITHUB_APP_CLIENT_SECRET=
-GITHUB_APP_PRIVATE_KEY_PATH=
+GITHUB_APP_PRIVATE_KEY=
 VITE_GITHUB_APP_INSTALLATION_URL=https://github.com/apps/openpledge-io/installations/new
 
 # CASHIER & STRIPE SETTINGS
