--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@vueuse/core": "^10.6.1",
         "date-fns": "^3.1.0",
         "dayjs": "^1.11.10",
+        "shepherd.js": "^14.1.0",
         "vue-intersect": "^3.0.0",
         "vue-loading-skeleton": "^2.0.0-beta.1",
         "vue-select": "^4.0.0-beta.6",
