--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,4 @@ STRIPE_SECRET=
 CASHIER_CURRENCY=eur
 CASHIER_LOGGER=stack
 STRIPE_CONNECT_URL=https://connect.stripe.com/oauth/v2/authorize?response_type=code&client_id=ca_Q40iVqnL3jLWlHnHDMar7cafMr79CTZ4&scope=read_write&redirect_uri=
+PLATFORM_FEE_PERCENTAGE=
