--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
         "@vuepic/vue-datepicker": "^8.3.1",
         "@vueuse/components": "^10.9.0",
         "@vueuse/core": "^10.6.1",
+        "canvas-confetti": "^1.9.3",
         "date-fns": "^3.1.0",
         "dayjs": "^1.11.10",
+        "marked": "^15.0.3",
         "shepherd.js": "^14.1.0",
         "vue-intersect": "^3.0.0",
         "vue-loading-skeleton": "^2.0.0-beta.1",
