--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "aws/aws-sdk-php": "^3.343",
         "barryvdh/laravel-dompdf": "^3.1",
         "firebase/php-jwt": "^6.10",
         "graham-campbell/github": "^12.3",
