Add wasyprint to docker fie

--- a/docker/8.2/Dockerfile
+++ b/docker/8.2/Dockerfile
@@ -54,6 +54,8 @@ RUN apt-get update && apt-get upgrade -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+RUN apt-get update && apt-get install -y weasyprint
+
 RUN setcap "cap_net_bind_service=+ep" /usr/bin/php8.2
 
 RUN userdel -r ubuntu
