Add env config for disabling sending invoices

--- a/.env.example
+++ b/.env.example
@@ -77,4 +77,9 @@ CASHIER_CURRENCY=usd
 CASHIER_LOGGER=stack
 STRIPE_CONNECT_URL=https://connect.stripe.com/oauth/v2/authorize?response_type=code&client_id=ca_Q40iVqnL3jLWlHnHDMar7cafMr79CTZ4&scope=read_write&redirect_uri=
 PLATFORM_FEE_PERCENTAGE=
+
+# This was from croatian company
+SEND_CUSTOM_INVOICE_EMAIL=false
 FEEDBACK_MAIL=
+
+
